syntax="proto3";
package market_communication_with_client;
service MarketPlace
{
    rpc SearchItem(SearchRequest) returns (stream ItemInfo);
    rpc BuyItem(BuyRequest) returns (StatusResponse);
    rpc AddWish(WishRequest) returns (StatusResponse);
    rpc RateItem(RateRequest) returns (StatusResponse);
}
enum Category
{
    ELECTRONICS=0;
    FASHION=1;
    OTHERS=2;
    ANY=3;
}
message SearchRequest
{
    string item_name=1;
    Category category=2;
}
message ProductDisplayResponse
{
    uint64 id = 1;
    float price = 2;
    string name = 3;
    Category productCategory=4;
    uint32 quantityRemaining=5;
    Address address = 6;
    float rating = 7;
}
message ItemInfo
{
    repeated ProductDisplayResponse products=1;
}
message Address
{
    string ipAddress=1;
    uint32 portNumber=2;
}
message BuyRequest
{
    Address address=1;
    uint64 id=2;
    uint32 quantity=3;
}
message WishRequest
{
    Address address=1;
    uint64 id=2;
}
message RateRequest
{
    Address address=1;
    uint64 id=2;
    int32 rating=3;
}
message StatusResponse
{
    string status=1;
}